@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-07T01:22:02Z",
+  "timestamp" : "2024-01-07T16:06:34Z",
   "count_outdated" : 2221,
   "uniques_outdated" : 703,
-  "count" : 2228,
-  "uniques" : 709,
+  "count" : 2229,
+  "uniques" : 710,
   "views" : [
     {
       "timestamp": "2023-12-28T00:00:00Z",
@@ -52,6 +52,15 @@
     },
     {
       "timestamp": "2024-01-06T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
