@@ -1,3 +1,12 @@
+2024-01-07T16:06:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7439297685 # 2
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
+* notice: last 14d: unq all: 7 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 703 2221 / 709 2228
+* notice: next accum: outdated-unq outdated-all / unq all: 703 2221 / 710 2229
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-07]
+
 2024-01-07T01:22:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7435157017 # 2226
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-07
